--- a/src/app/pages/pokemon-list/pokemon-list.page.html
+++ b/src/app/pages/pokemon-list/pokemon-list.page.html
@@ -1,13 +1,31 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>pokemonList</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Pokémons</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">pokemonList</ion-title>
-    </ion-toolbar>
-  </ion-header>
+
+    <ion-grid>
+        <ion-row>
+            <ion-col size="12" size-md="12" size-lg="12" *ngFor="let pokemon of pokemons">
+                <ion-card>
+                    <ion-router-link [routerLink]="'/pokemon-detail/' + pokemon.name">
+                        <ion-card-content>
+                            <ion-list lines="none">
+                                <ion-item>
+                                    <ion-thumbnail slot="start" class="pokemon-image">
+                                        <img alt="Silhouette of mountains" [src]="pokemon.image"/>
+                                    </ion-thumbnail>
+                                    <ion-label>{{ pokemon.name | uppercase }}</ion-label>
+                                    <ion-icon name="chevron-forward-outline"></ion-icon>
+                                </ion-item>
+                            </ion-list>
+                        </ion-card-content>
+                    </ion-router-link>
+                </ion-card>
+            </ion-col>
+        </ion-row>
+    </ion-grid>
+
 </ion-content>
