--- a/src/app/pages/pokemon-list/pokemon-list.page.html
+++ b/src/app/pages/pokemon-list/pokemon-list.page.html
@@ -1,14 +1,24 @@
-<ion-header [translucent]="true">
+<ion-header>
     <ion-toolbar>
-        <ion-title>Pokémons</ion-title>
+        <ion-title>
+            Pokémon List
+        </ion-title>
+        <ion-buttons slot="end">
+            <ion-button (click)="toggleOrder()">
+                <ion-icon [name]="ascendingOrder ? 'arrow-up' : 'arrow-down'"></ion-icon>
+            </ion-button>
+        </ion-buttons>
+    </ion-toolbar>
+    <ion-toolbar>
+        <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="filterPokemons($event)" placeholder="Search Pokémon"></ion-searchbar>
     </ion-toolbar>
 </ion-header>
 
-<ion-content [fullscreen]="true">
+<ion-content >
 
     <ion-grid>
         <ion-row>
-            <ion-col size="12" size-md="12" size-lg="12" *ngFor="let pokemon of pokemons">
+            <ion-col size="12" size-md="12" size-lg="12" *ngFor="let pokemon of filteredPokemons">
                 <ion-card>
                     <ion-router-link [routerLink]="'/pokemon-detail/' + pokemon.name">
                         <ion-card-content>
@@ -27,5 +37,9 @@
             </ion-col>
         </ion-row>
     </ion-grid>
+    <ion-infinite-scroll threshold="100px" (ionInfinite)="loadPokemons($event)">
+        <ion-infinite-scroll-content loadingSpinner="bubbles" loadingText="Carregando Pokémons...">
+        </ion-infinite-scroll-content>
+    </ion-infinite-scroll>
 
 </ion-content>
