--- a/src/app/pages/pokemon-detail/pokemon-detail.page.html
+++ b/src/app/pages/pokemon-detail/pokemon-detail.page.html
@@ -1,13 +1,65 @@
 <ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>pokemonDetail</ion-title>
-  </ion-toolbar>
+    <ion-toolbar>
+        <ion-title>Info Pokémon - {{ pokemon?.name | uppercase }}</ion-title>
+    </ion-toolbar>
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">pokemonDetail</ion-title>
-    </ion-toolbar>
-  </ion-header>
+    <ion-card *ngIf="pokemon">
+        <ion-card-content class="ion-text-center">
+            <div class="image-container">
+                <img alt="{{pokemon?.name}}"
+                     src="https://raw.githubusercontent.com/PokeAPI/sprites/master/sprites/pokemon/{{pokemon?.id}}.png"/>
+            </div>
+        </ion-card-content>
+        <ion-card-header class="ion-text-center">
+            <ion-card-title>{{ pokemon?.name | uppercase }}</ion-card-title>
+
+            <ion-avatar aria-hidden="true" (click)="toggleFavorite(pokemon.id)">
+                <ion-icon [name]="isFavorite(pokemon.id) ? 'heart' : 'heart-outline'" size="large"
+                          [color]="isFavorite(pokemon.id) ? 'danger' : 'dark'"></ion-icon>
+            </ion-avatar>
+
+        </ion-card-header>
+
+        <ion-card-content>
+            <ion-list>
+                <ion-item>
+                    <ion-avatar aria-hidden="true" slot="start">
+                        <ion-icon name="accessibility-outline" size="large"></ion-icon>
+                    </ion-avatar>
+
+                    <ion-label color="warning">Altura: {{ pokemon?.height }} m</ion-label>
+                </ion-item>
+                <ion-item>
+                    <ion-avatar aria-hidden="true" slot="start">
+                        <ion-icon name="barbell-outline" size="large"></ion-icon>
+                    </ion-avatar>
+
+                    <ion-label color="warning">Peso: {{ pokemon?.weight }} kg</ion-label>
+                </ion-item>
+                <ion-item>
+                    <ion-avatar aria-hidden="true" slot="start">
+                        <ion-icon name="medal-outline" size="large"></ion-icon>
+                    </ion-avatar>
+
+                    <ion-label color="warning">Experiência: {{ pokemon?.base_experience }}</ion-label>
+                </ion-item>
+                <ion-item>
+                    <ion-avatar aria-hidden="true" slot="start">
+                        <ion-icon name="diamond-outline" size="large"></ion-icon>
+                    </ion-avatar>
+
+                    <ion-label color="warning">Habilidades: {{ pokemon.abilities }}</ion-label>
+                </ion-item>
+                <ion-item>
+                    <ion-avatar aria-hidden="true" slot="start">
+                        <ion-icon name="id-card-outline" size="large"></ion-icon>
+                    </ion-avatar>
+
+                    <ion-label color="warning">Tipo: {{ pokemon.types }}</ion-label>
+                </ion-item>
+            </ion-list>
+        </ion-card-content>
+    </ion-card>
 </ion-content>
