--- a/src/app/pages/pokemon-detail/pokemon-detail.page.html
+++ b/src/app/pages/pokemon-detail/pokemon-detail.page.html
@@ -15,9 +15,9 @@
         <ion-card-header class="ion-text-center">
             <ion-card-title>{{ pokemon?.name | uppercase }}</ion-card-title>
 
-            <ion-avatar aria-hidden="true" (click)="toggleFavorite(pokemon.id)">
-                <ion-icon [name]="isFavorite(pokemon.id) ? 'heart' : 'heart-outline'" size="large"
-                          [color]="isFavorite(pokemon.id) ? 'danger' : 'dark'"></ion-icon>
+            <ion-avatar aria-hidden="true" (click)="toggleFavorite(pokemon)">
+                <ion-icon [name]="isFavorite(pokemon.name) ? 'heart' : 'heart-outline'" size="large"
+                          [color]="isFavorite(pokemon.name) ? 'danger' : 'dark'"></ion-icon>
             </ion-avatar>
 
         </ion-card-header>
@@ -50,7 +50,7 @@
                         <ion-icon name="diamond-outline" size="large"></ion-icon>
                     </ion-avatar>
 
-                    <ion-label color="warning">Habilidades: {{ pokemon.abilities }}</ion-label>
+                    <ion-label color="warning">Habilidade: {{ pokemon.abilities }}</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-avatar aria-hidden="true" slot="start">
@@ -59,7 +59,17 @@
 
                     <ion-label color="warning">Tipo: {{ pokemon.types }}</ion-label>
                 </ion-item>
+                <ion-item>
+                    <ion-avatar aria-hidden="true" slot="start">
+                        <ion-icon name="move-outline" size="large"></ion-icon>
+                    </ion-avatar>
+
+                    <ion-label color="warning">Movimento: {{ pokemon.moves }}</ion-label>
+                </ion-item>
             </ion-list>
         </ion-card-content>
     </ion-card>
+    <ion-content class="ion-padding">
+        <ion-toast trigger="open-toast"></ion-toast>
+    </ion-content>
 </ion-content>
