update detail view

--- a/src/app/pages/pokemon-detail/pokemon-detail.page.html
+++ b/src/app/pages/pokemon-detail/pokemon-detail.page.html
@@ -29,14 +29,14 @@
                         <ion-icon name="accessibility-outline" size="large"></ion-icon>
                     </ion-avatar>
 
-                    <ion-label color="warning">Altura: {{ pokemon?.height }} m</ion-label>
+                    <ion-label color="warning">Altura: {{ height }} m</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-avatar aria-hidden="true" slot="start">
                         <ion-icon name="barbell-outline" size="large"></ion-icon>
                     </ion-avatar>
 
-                    <ion-label color="warning">Peso: {{ pokemon?.weight }} kg</ion-label>
+                    <ion-label color="warning">Peso: {{ weight }} kg</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-avatar aria-hidden="true" slot="start">
@@ -50,21 +50,21 @@
                         <ion-icon name="diamond-outline" size="large"></ion-icon>
                     </ion-avatar>
 
-                    <ion-label color="warning">Habilidade: {{ pokemon.abilities }}</ion-label>
+                    <ion-label color="warning">Habilidade: {{ abilities }}</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-avatar aria-hidden="true" slot="start">
                         <ion-icon name="id-card-outline" size="large"></ion-icon>
                     </ion-avatar>
 
-                    <ion-label color="warning">Tipo: {{ pokemon.types }}</ion-label>
+                    <ion-label color="warning">Tipo: {{ types }}</ion-label>
                 </ion-item>
                 <ion-item>
                     <ion-avatar aria-hidden="true" slot="start">
                         <ion-icon name="move-outline" size="large"></ion-icon>
                     </ion-avatar>
 
-                    <ion-label color="warning">Movimento: {{ pokemon.moves }}</ion-label>
+                    <ion-label color="warning">Movimento: {{ moves }}</ion-label>
                 </ion-item>
             </ion-list>
         </ion-card-content>
