update menu sidebar

--- a/src/app/pages/pokemon-favorites/pokemon-favorites.page.html
+++ b/src/app/pages/pokemon-favorites/pokemon-favorites.page.html
@@ -1,5 +1,9 @@
+
 <ion-header [translucent]="true">
     <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
         <ion-title>Meus Favoritos</ion-title>
     </ion-toolbar>
 </ion-header>
@@ -16,13 +20,12 @@
                         <ion-card-header>
                             <ion-card-title>{{ pokemon.name | uppercase }}</ion-card-title>
                         </ion-card-header>
+
                         <ion-card-content>
-                            <p>Habilidade: {{ pokemon.abilities }}</p>
-                            <p>Tipo: {{ pokemon.types }}</p>
+                            <p>Habilidade: {{ pokemon.abilities[0].ability.name }}</p>
+                            <p>Tipo: {{ pokemon.types[0].type.name }}</p>
                             <p>Experiência: {{ pokemon.base_experience }}</p>
-
                         </ion-card-content>
-
                     </ion-router-link>
 
                     <ion-avatar aria-hidden="true" (click)="toggleFavorite(pokemon)">
