--- a/src/app/pages/pokemon-detail/pokemon-detail.page.html
+++ b/src/app/pages/pokemon-detail/pokemon-detail.page.html
@@ -1,5 +1,9 @@
+
 <ion-header [translucent]="true">
     <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
         <ion-title>Info Pokémon - {{ pokemon?.name | uppercase }}</ion-title>
     </ion-toolbar>
 </ion-header>
