--- a/src/app/pages/pokemon-list/pokemon-list.page.html
+++ b/src/app/pages/pokemon-list/pokemon-list.page.html
@@ -1,5 +1,8 @@
 <ion-header>
     <ion-toolbar>
+        <ion-buttons slot="start">
+            <ion-menu-button></ion-menu-button>
+        </ion-buttons>
         <ion-title>
             Lista de Pokémons
         </ion-title>
@@ -13,6 +16,7 @@
         <ion-searchbar [(ngModel)]="searchTerm" (ionInput)="filterPokemons($event)" placeholder="Search Pokémon"></ion-searchbar>
     </ion-toolbar>
 </ion-header>
+
 
 <ion-content >
 
